# machine-learning-for-trading

./: .env.example  .gitignore  .pre-commit-config.yaml  CNAME  Installation Guide.md  LICENSE  README.md  Resources.md  _config.yml  docker-compose.yml  environment.yml  environment_linux.yml  environment_mac_osx.yml  environment_macos.yml  environment_windows.yml  installation.md  matplotlibrc  pyproject.toml  sitecustomize.py  utils.py
.github/: dependabot.yml
01_machine_learning_for_trading/: README.md
01_process_is_edge/: README.md  factor_regimes.ipynb  factor_regimes.py  macro_regimes.ipynb  macro_regimes.py
02_financial_data_universe/: 01_us_equities_eda.ipynb  01_us_equities_eda.py  02_corporate_actions.ipynb  02_corporate_actions.py  03_etfs_eda.ipynb  03_etfs_eda.py  04_cme_futures_eda.ipynb  04_cme_futures_eda.py  05_futures_session_aggregation.ipynb  05_futures_session_aggregation.py  06_futures_continuous.ipynb  06_futures_continuous.py  07_sp500_options_eda.ipynb  07_sp500_options_eda.py  08_options_greeks_computation.ipynb  08_options_greeks_computation.py  09_options_continuous.ipynb  09_options_continuous.py  10_crypto_perps_eda.ipynb  10_crypto_perps_eda.py  11_crypto_premium_analysis.ipynb  11_crypto_premium_analysis.py  12_fx_pairs_eda.ipynb  12_fx_pairs_eda.py  13_data_quality_framework.ipynb  13_data_quality_framework.py  14_point_in_time_validation.ipynb  14_point_in_time_validation.py  15_survivorship_bias_detection.ipynb  15_survivorship_bias_detection.py  16_provider_comparison.ipynb  16_provider_comparison.py  17_complete_pipeline.ipynb  17_complete_pipeline.py  18_data_management.ipynb  18_data_management.py  19_incremental_updates.ipynb  19_incremental_updates.py  20_storage_benchmark_file.ipynb  20_storage_benchmark_file.py  (+5 more)
02_market_and_fundamental_data/: README.md
03_alternative_data/: README.md
03_market_microstructure/: 01_itch_parser.ipynb  01_itch_parser.py  02_itch_lob_reconstruction.ipynb  02_itch_lob_reconstruction.py  03_itch_lob_analysis.ipynb  03_itch_lob_analysis.py  04_itch_order_lifecycle_analysis.ipynb  04_itch_order_lifecycle_analysis.py  05_itch_trading_activity.ipynb  05_itch_trading_activity.py  06_itch_intraday_patterns.ipynb  06_itch_intraday_patterns.py  07_itch_stylized_facts.ipynb  07_itch_stylized_facts.py  08_databento_lob_reconstruction.ipynb  08_databento_lob_reconstruction.py  09_databento_mbo_analysis.ipynb  09_databento_mbo_analysis.py  10_iex_lob_reconstruction.ipynb  10_iex_lob_reconstruction.py  11_algoseek_taq_eda.ipynb  11_algoseek_taq_eda.py  12_algoseek_taq_lob_reconstruction.py  13_algoseek_minute_bars_eda.ipynb  13_algoseek_minute_bars_eda.py  14_itch_bar_sampling.ipynb  14_itch_bar_sampling.py  15_itch_lee_ready.ipynb  15_itch_lee_ready.py  16_itch_information_bars.ipynb  16_itch_information_bars.py  17_databento_bar_sampling.ipynb  17_databento_bar_sampling.py  18_algoseek_jump_detection.ipynb  18_algoseek_jump_detection.py  README.md  itch_message_specs.py  limit_orderbook.py
04_alpha_factor_research/: 01_feature_engineering.ipynb  02_how_to_use_talib.ipynb  03_kalman_filter_and_wavelets.ipynb  04_single_factor_zipline.ipynb  05_multiple_factors_quantopian_research.ipynb  06_performance_eval_alphalens.ipynb  07_factor_library_quantopian.ipynb  README.md
04_fundamental_alternative_data/: 01_academic_characteristics.ipynb  01_academic_characteristics.py  02_sec_filing_explorer.ipynb  02_sec_filing_explorer.py  03_sec_form4_insider_transactions.ipynb  03_sec_form4_insider_transactions.py  04_sec_xbrl_fundamentals.ipynb  04_sec_xbrl_fundamentals.py  05_entity_resolution.ipynb  05_entity_resolution.py  06_fred_macro_eda.ipynb  06_fred_macro_eda.py  07_macro_data_alignment.ipynb  07_macro_data_alignment.py  08_futures_positioning.ipynb  08_futures_positioning.py  09_onchain_fundamentals.ipynb  09_onchain_fundamentals.py  10_institutional_holdings_13f.ipynb  10_institutional_holdings_13f.py  11_defi_tvl_evaluation.ipynb  11_defi_tvl_evaluation.py  12_kalshi_prediction_markets.ipynb  12_kalshi_prediction_markets.py  13_polymarket_prediction_markets.ipynb  13_polymarket_prediction_markets.py  14_text_data_extraction.ipynb  14_text_data_extraction.py  README.md
05_strategy_evaluation/: 01_backtest_with_trades.ipynb  02_backtest_with_pf_optimization.ipynb  03_pyfolio_demo.ipynb  04_mean_variance_optimization.ipynb  05_kelly_rule.ipynb  README.md
05_synthetic_data/: 00_classical_simulation.ipynb  00_classical_simulation.py  01_timegan.ipynb  01_timegan.py  02_tailgan_tail_risk.ipynb  02_tailgan_tail_risk.py  03_sigcwgan_signatures.ipynb  03_sigcwgan_signatures.py  04_gtgan_irregular.ipynb  04_gtgan_irregular.py  05_diffusion_ts.ipynb  05_diffusion_ts.py  06_llm_tabular_great.ipynb  06_llm_tabular_great.py  07_dp_gan.ipynb  07_dp_gan.py  README.md  timegan_metrics.py
06_machine_learning_process/: 01_machine_learning_workflow.ipynb  01_machine_learning_workflow.py  02_mutual_information.ipynb  02_mutual_information.py  03_bias_variance-checkpoint.ipynb  03_bias_variance.ipynb  03_bias_variance.py  04_cross_validation.py  README.md  __init__.py
06_strategy_definition/: 01_cv_foundations.ipynb  01_cv_foundations.py  02_case_study_overview.ipynb  02_case_study_overview.py  README.md  exploration.md
07_defining_the_learning_task/: 01_data_quality_diagnostics.ipynb  01_data_quality_diagnostics.py  02_preprocessing_pipeline.ipynb  02_preprocessing_pipeline.py  03_label_methods.ipynb  03_label_methods.py  04_maximum_favorable_adverse_excursion.ipynb  04_maximum_favorable_adverse_excursion.py  05_signal_evaluation.py  06_ic_inference.ipynb  06_ic_inference.py  07_multiple_testing.ipynb  07_multiple_testing.py  08_causal_sanity_checks.ipynb  08_causal_sanity_checks.py  10_ml4t_library_ecosystem.ipynb  10_ml4t_library_ecosystem.py  README.md  _benchmark_utils.py
07_linear_models/: 01_linear_regression_intro.ipynb  02_fama_macbeth.ipynb  03_linear_regression.ipynb  README.md  (+12 more)
envs/benchmark/: Dockerfile  Dockerfile.full  pyproject.full.toml  pyproject.toml
envs/py312/: Dockerfile  pyproject.toml
(+1437 files in other folders)
